2010-05-28  Helmut Eller  <heller@common-lisp.net>

	* slime-c-p-c.el slime-fancy-inspector.el slime-fancy.el
	slime-fontifying-fu.el slime-fuzzy.el slime-package-fu.el
	slime-parse.el slime-presentations.el slime-references.el
	slime-repl.el slime-scratch.el: Call provide at the end of the
	file.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (wrap-compilation): Set Compilation.explict flag.
	(list-file): Add cast to resolve overloaded parse method.
	(disassemble-form): Update for change from 2010-05-18.

2010-05-19  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-list-repl-short-cuts): Don't scroll to the
	bottom, don't error if a shortcut has no documentation.

2010-05-16  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (decode-arglist): Handle (x . y) macro arglists.

2010-05-14  Tobias C. Rittweiler <tcr@freebits.de>

	* slime-highlight-edits.el, slime-hyperdoc.el, slime-mrepl.el,
          slime-snapshot.el: Fix typo.

2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>

	Perform PATHNAME on file-streams safely.

	* swank-fancy-inspector.lisp (make-visit-file-thunk): Deleted.
	(make-pathname-ispec): New helper.
	(make-file-stream-ispec): New helper.
	(emacs-inspect file-stream): Use them.
	(emacs-inspect stream-error): Ditto.

2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>

	* slime-autodoc.el, slime-c-p-c.el, slime-compiler-notes-tree.el,
	slime-enclosing-context.el, slime-fancy.el, slime-fuzzy.el,
	slime-hyperdoc.el, slime-mdot-fu.el, slime-mrepl.el,
	slime-parse.el, slime-presentations.el, slime-repl.el,
	slime-snapshot.el, slime-tramp.el, slime-xref-browser.el:

	Use newly added `define-slime-contrib' macro to specify
	slime and swank dependencies, and to specify what should happen on
	contrib load/unload.

2010-05-13  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el (slime-asdf-collect-notes): New variable.
	Collect and display notes produced by the compiler. Defaulted to T.
